k8s/client-deployment.yml

apiVersion: apps/v1

kind: Deployment
metadata:
  name: client-deployment
spec: 
  replicas: 3
  selector: 
    matchLabels:
      component: web
  template:
  # config of each pod maintained by the deployment
    metadata:
      labels:
        component: web
    spec:
      containers: 
        - name: client
          image: yingtingyu33/multi-client
          # image: stephengrider/multi-client
          ports:
            - containerPort: 3000
