k8s/redis-deployment.yml
apiVersion: apps/v1

kind: Deployment
metadata:
  name: redis-deployment
spec: 
  replicas: 1
  selector: 
    matchLabels:
      component: redis
  template:
  # config of each pod maintained by the deployment
    metadata:
      labels:
        component: redis
    spec:
      containers: 
        - name: redis
          image: redis
          # image: stephengrider/multi-client
          ports:
            - containerPort: 6379
