k8s/server-deployment.yml

apiVersion: apps/v1

kind: Deployment
metadata:
  name: server-deployment
spec: 
  replicas: 3
  selector: 
    matchLabels:
      component: server
  template:
  # config of each pod maintained by the deployment
    metadata:
      labels:
        component: server
    spec:
      containers: 
        - name: server
          image: yingtingyu33/multi-server
          # image: stephengrider/multi-client
          ports:
            - containerPort: 5000
