k8s/worker-deployment.yml

apiVersion: apps/v1

kind: Deployment
metadata:
  name: worker-deployment
spec: 
  replicas: 1
  selector: 
    matchLabels:
      component: worker
  template:
  # config of each pod maintained by the deployment
    metadata:
      labels:
        component: worker
    spec:
      containers: 
        - name: worker
          image: yingtingyu33/multi-worker
          # image: stephengrider/multi-client
