k8s/server-cluster-ip-service.yml

apiVersion: v1

kind: Service
metadata:
  name: server-cluster-ip-service
spec: 
  type: ClusterIP
  selector: 
    component: server
  ports:
      # port: how other object/property inside the node to access the target pbject that we are setting up access
      # target port: port on the target pod(the object) that we are providing access to
      # other object -> access port of the service -> target port of the service -> access the object
    - port: 5000
      targetPort: 5000
